# jota-python-utils

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/: pull_request_template.md
.github/workflows/: lint-test.yml
jota_utils/: datetime.py  dict.py  encoding.py  models.py  text.py  validators.py
tests/: conftest.py  test_datetime.py  test_dict.py  test_validators.py
