[tool.poetry]
name = "jota-utils"
version = "0.4.0"
description = "Utils library for JOTA backend apps."
authors = ["Tecnologia JOTA <tecnologia@jota.info>"]

[tool.poetry.dependencies]
python = ">= 3.7.2, <4.0"
Django = "3.2.15"
django-phonenumbers = "^1.0.1"
django-phonenumber-field = "^6.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=jota_utils --cov-report=xml:coverage.xml"
